# prepo

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: python-ci.yml
alert/: Alert.py
analyzer/: Analyzer.py  PolarsAnalyzer.py
analyzer/report/: ColumnReport.py  CovarianceReport.py  DataframeReport.py  FullReport.py  NumericColumnReport.py  StringColumnReport.py  TemporalColumnReport.py
analyzer/utils/: FileType.py
prepo/: __init__.py
prepo/analyzer/: Analyzer.py  PolarsAnalyzer.py
prepo/analyzer/utils/: FileType.py
prepo/api/: api.py
prepo/report/: BooleanColumnReport.py  ColumnReport.py  CovarianceReport.py  DataframeReport.py  FullReport.py  NumericColumnReport.py  StringColumnReport.py  TemporalColumnReport.py
report/: ColumnReport.py  CovarianceReport.py  DataframeReport.py  FullReport.py  NumericColumnReport.py  StringColumnReport.py  TemporalColumnReport.py
tests/analyzer/: conftest.py  test_polars_analyzer.py
tests/api/: test_api.py
tests/report/: test_boolean_column_report.py  test_covariance_report.py  test_dataframe_report.py  test_full_report.py  test_numeric_column_report.py  test_string_column_report.py  test_temporal_column_report.py
tests/test_data/: titanic_truncated.csv  titanic_truncated.json  titanic_truncated.parquet  titanic_truncated.xlsx
tests/test_data/titanic_truncated_delta/: part-00000-3d79b4b7-9475-48da-bf13-d2662e5c206b-c000.snappy.parquet
