[project]
name = "prepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.1",
    "polars>=1.35.2",
    "pre-commit>=4.5.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.4",

]
[tool.ruff]
# But use a different line length.
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "D"]
ignore = ["D203", "D213", "D104", "D105", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
plugins = ['pydantic.mypy']
