[project]
name = "prepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.1",
    "fastapi[standard]>=0.124.4",
    "polars>=1.35.2",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
extra-data-types = [
    "deltalake>=1.2.1",
    "fastexcel>=0.18.0",
]

[dependency-groups]
dev = [
    "deltalake>=1.2.1",
    "fastexcel>=0.18.0",
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
]
[tool.ruff]
# But use a different line length.
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "D"]
ignore = ["D203", "D213", "D104", "D105", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"__init__.py" = ["F401"]

[tool.mypy]
plugins = ['pydantic.mypy']

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["prepo"]
